--- a/SalesWebMVC/appsettings.json
+++ b/SalesWebMVC/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMVCContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMVCContext-684e3d33-d73e-4906-ae6d-138d9600f67e;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMVCContext": "Server=DESKTOP-68RH873\\SQLEXPRESS;Database=saleswebmvcappdb;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
